--- a/scholar.html
+++ b/scholar.html
@@ -33,6 +33,10 @@ header-img: "img/post-bg-rwd.jpg"
         <li><a href="http://jekyll.com.cn/">jekyll</a></li>
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
+    <p>我的论文:</p>
+    <p><a href="https://doi.org/10.3390/f9070398">Liu, G.; Wang, J.; Dong, P.; Chen, Y.; Liu, Z.	Estimating Individual Tree Height and Diameter at Breast Height (DBH) from Terrestrial Laser Scanning (TLS) Data at Plot Level. Forests 2018, 9, 398.</a>
+       <a href="https://ieeexplore.ieee.org/abstract/document/7378600">Liu, Guangjie, et al. &quot;Research on extraction method of urban impervious surface information.&quot; Geoinformatics, 2015 23rd International Conference on. IEEE, 2015.</a>
+    </p>
 </div>
 
 <!-- English Version -->
